--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,7 +14,7 @@ jobs:
   test:
     name: OTC test - docs
     environment: dev
-    runs-on: [selfhosted]
+    runs-on: [Linux]
     steps:
       - uses: actions/checkout@v3
       - name: Test - ToC
