--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,10 +2,12 @@ name: OTC Test - docs
 on:
   workflow_dispatch:
   pull_request:
+on:
+  release:
+    types: [published]
   push:
     branches:
-      - 'main'
-
+      - '*'
 permissions:
   contents: write
 
