--- a/docs/action.yml
+++ b/docs/action.yml
@@ -22,6 +22,11 @@ runs:
       with:
         working-dir: ${{ inputs.TF_DIR }}
 
+    - name: Update README
+      run: "bash ${{ github.action_path }}/scripts/readme.sh"
+      shell: bash
+      env:
+        TF_DIR: '${{ inputs.TF_DIR}}/README.md'
 
 
 
