--- a/docs/action.yml
+++ b/docs/action.yml
@@ -26,7 +26,7 @@ runs:
       run: "bash ${{ github.action_path }}/scripts/readme.sh"
       shell: bash
       env:
-        TF_DIR: '${{ inputs.TF_DIR}}/README.md'
+        FILE: '${{ inputs.TF_DIR}}/README.md'
 
 
 
