--- a/docs/action.yml
+++ b/docs/action.yml
@@ -9,6 +9,9 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Update markdown tocs
       if: ${{ inputs.MARKDOWN }}
