--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,9 +15,9 @@ jobs:
     environment: dev
     runs-on: [Linux]
     steps:
-      - name: Environment
-        run: "export"
-        shell: bash
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Test - Docs
         uses: ./docs/
         with:
