test with token

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,3 +22,4 @@ jobs:
         uses: ./docs/
         with:
           TF_DIR: '${{ github.workspace }}/test/docs'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
