--- a/docs/action.yml
+++ b/docs/action.yml
@@ -5,20 +5,20 @@ inputs:
   TF_DIR:
     description: 'Working directory for action'
     required: true
+  GITHUB_TOKEN:
+    description: 'GITHUB Token'
+    required: true
 
 runs:
   using: "composite"
   steps:
-    - uses: actions/checkout@v3
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-
     - name: Update markdown tocs
       if: ${{ inputs.MARKDOWN }}
       uses: technote-space/toc-generator@v4
       with:
        COMMIT_MESSAGE: 'docs: update TOC'
        FOLDING: true
+       GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
     
     - name: Update terrafom docs
       uses: terraform-docs/gh-actions@v1.0.0
@@ -30,6 +30,7 @@ runs:
       shell: bash
       env:
         FILE: '${{ inputs.TF_DIR}}/README.md'
+        GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
 
 
 
