--- a/docs/action.yml
+++ b/docs/action.yml
@@ -21,14 +21,14 @@ runs:
       run: "bash ${{ github.action_path }}/scripts/readme.sh"
       shell: bash
       env:
-        FILE: '${{ inputs.TF_DIR}}/README*.md'
+        FILE: '${{ inputs.TF_DIR}}/README.md'
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
     
     - name: Update markdown tocs
       uses: technote-space/toc-generator@v4
       with:
        COMMIT_MESSAGE: 'docs: update TOC'
-       TARGET_PATHS: '${{ inputs.TF_DIR}}/README.md'
+       TARGET_PATHS: '${{ inputs.TF_DIR}}/README*.md'
        FOLDING: true
        GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
 
