--- a/docs/action.yml
+++ b/docs/action.yml
@@ -29,6 +29,7 @@ runs:
       with:
        COMMIT_MESSAGE: 'docs: update TOC'
        FOLDING: true
+       TARGET_PATHS: '${{ inputs.GITHUB_TOKEN }}/README*.md'
        GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
 
 
