--- a/docs/action.yml
+++ b/docs/action.yml
@@ -29,7 +29,7 @@ runs:
       with:
        COMMIT_MESSAGE: 'docs: update TOC'
        FOLDING: true
-       TARGET_PATHS: '${{ inputs.TF_DIR }}/*.md'
+       TARGET_PATHS: '.'
        GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
 
 
