--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
 name: OTC Test - Release
 on:
   push:
-    branch:
-      - 'main'
-
+    tags:
+      - '*.*.*'
 jobs:
   test:
     name: OTC test - Release
