--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
 name: OTC Test - Release
 on:
   push:
-    tags:
-      - '*.*.*'
-
+    branches:
+      - 'main'
 permissions:
   contents: write
 
@@ -17,31 +16,33 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - run: export
-      - name: Test - Docs
-        uses: ./docs/
-        with:
-          TF_DIR: '${{ github.workspace }}/test/docs'
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: "Determine tag"
-        run: "echo \"RELEASE_TAG=${GITHUB_REF#refs/tags/}\" >> $GITHUB_ENV"
-      - name: "Create release"
-        uses: "actions/github-script@v6"
-        with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-          script: |
-            try {
-              const response = await github.rest.repos.createRelease({
-                draft: false,
-                generate_release_notes: true,
-                name: process.env.RELEASE_TAG,
-                owner: context.repo.owner,
-                prerelease: false,
-                repo: context.repo.repo,
-                tag_name: process.env.RELEASE_TAG,
-              });
+      - uses: brpaz/action-semantic-release@v1
 
-              core.exportVariable('RELEASE_ID', response.data.id);
-              core.exportVariable('RELEASE_UPLOAD_URL', response.data.upload_url);
-            } catch (error) {
-              core.setFailed(error.message);
-            }
+      # - name: Test - Docs
+      #   uses: ./docs/
+      #   with:
+      #     TF_DIR: '${{ github.workspace }}/test/docs'
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: "Determine tag"
+      #   run: "echo \"RELEASE_TAG=${GITHUB_REF#refs/tags/}\" >> $GITHUB_ENV"
+      # - name: "Create release"
+      #   uses: "actions/github-script@v6"
+      #   with:
+      #     github-token: "${{ secrets.GITHUB_TOKEN }}"
+      #     script: |
+      #       try {
+      #         const response = await github.rest.repos.createRelease({
+      #           draft: false,
+      #           generate_release_notes: true,
+      #           name: process.env.RELEASE_TAG,
+      #           owner: context.repo.owner,
+      #           prerelease: false,
+      #           repo: context.repo.repo,
+      #           tag_name: process.env.RELEASE_TAG,
+      #         });
+      # 
+      #         core.exportVariable('RELEASE_ID', response.data.id);
+      #         core.exportVariable('RELEASE_UPLOAD_URL', response.data.upload_url);
+      #       } catch (error) {
+      #         core.setFailed(error.message);
+      #       }
