--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,9 @@ on:
   push:
     branches:
       - 'main'
-permissions:
-  contents: write
+
+# permissions:
+#   contents: write
 
 jobs:
   test:
@@ -16,16 +17,18 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - run: export
-      - name: Semantic Releaser
-        uses: jossef/action-semantic-releaser@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       # - name: Test - Docs
       #   uses: ./docs/
       #   with:
       #     TF_DIR: '${{ github.workspace }}/test/docs'
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          branches: ['main']
+
+
       # - name: "Determine tag"
       #   run: "echo \"RELEASE_TAG=${GITHUB_REF#refs/tags/}\" >> $GITHUB_ENV"
       # - name: "Create release"
