--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,8 @@ jobs:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
-        env:
+        with:
+          semantic_version: 16
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           branches: ['main']
 
