--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,6 +4,6 @@
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/github",
-    "@semantic-release/changelog@6.0.0"
+    "@semantic-release/changelog"
   ]
 }
