--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,11 +18,9 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - run: export
-      - name: Test - Docs
-        uses: ./docs/
-        with:
-          TF_DIR: '${{ github.workspace }}/test/docs'
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: |
+          git commit --allow-empty -m "fix: by push to main"
+          git push origin main
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
         env:
