--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,8 @@ jobs:
           # git push origin main
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
+        with:
+          dry_run: true
         env:
           GITHUB_TOKEN: ${{ secrets.ORG_TOKEN }}
 
