--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,3 +25,8 @@ jobs:
         with:
           TF_DIR: '${{ github.workspace }}/test/docs'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Test - Docs
+        uses: ./docs/
+        with:
+          TF_DIR: '${{ github.workspace }}/test/terraform'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
