--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -13,7 +13,7 @@ permissions:
 jobs:
   test:
     name: OTC test - docs
-    environment: dev
+    environment: INT
     runs-on: [Linux]
     steps:
       - uses: actions/checkout@v3
