--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   test:
     name: OTC test - Release
-    environment: dev
+    environment: INT
     runs-on: [Linux]
     steps:
       - uses: actions/checkout@v3
