--- a/terraform/action.yml
+++ b/terraform/action.yml
@@ -57,7 +57,7 @@ runs:
       uses: github/codeql-action/upload-sarif@v2
         with:
           # Path to SARIF file relative to the root of the repository
-          sarif_file: tflint.sarif.local
+          sarif_file: '${{ inputs.TF_DIR}}/tflint.sarif.local'
           category: Terraform
 
 
