--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,10 @@
 name: OTC Test - docs
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - '**'
-      - '!main'
+  # push:
+  #   branches:
+  #     - '**'
+  #     - '!main'
 
 
 permissions:
