--- a/terraform/action.yml
+++ b/terraform/action.yml
@@ -43,7 +43,7 @@ runs:
       run: "bash ${{ github.action_path }}/scripts/terraform.sh"
       shell: bash
       env:
-        TF_DIR: ${{ inputs.TF_DIR}}
+        TF_DIR: ${{ inputs.TF_DIR }}
         TERRAFORM_ACTION: ${{ inputs.TERRAFORM_ACTION }}
         TF_PARTIAL_BACKEND_FILE: ${{ inputs.TF_PARTIAL_BACKEND_FILE }}
         BACKEND_DESTROY: ${{ inputs.BACKEND_DESTROY }}
@@ -53,12 +53,11 @@ runs:
         CLOUD_REGION: ${{ inputs.CLOUD_REGION }}
         GCP_PROJECT_ID: ${{ inputs.GCP_PROJECT_ID }}
 
-    - name: tflint result
+    - name: upload tflint result
       uses: github/codeql-action/upload-sarif@v2
-        with:
-          # Path to SARIF file relative to the root of the repository
-          sarif_file: ${{ inputs.TF_DIR}}
-          category: Terraform
+      with:
+        sarif_file: ${{ inputs.TF_DIR }}
+        category: Terraform
 
 
 
