--- a/terraform/action.yml
+++ b/terraform/action.yml
@@ -58,6 +58,7 @@ runs:
       with:
         sarif_file: ${{ inputs.TF_DIR }}
         category: Terraform
+        GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
 
 
 
