--- a/terraform/action.yml
+++ b/terraform/action.yml
@@ -54,6 +54,7 @@ runs:
         GCP_PROJECT_ID: ${{ inputs.GCP_PROJECT_ID }}
 
     - name: upload tflint result
+      if: {{ inputs.TERRAFORM_ACTION == 'compliance' }} 
       uses: github/codeql-action/upload-sarif@v2
       with:
         sarif_file: ${{ inputs.TF_DIR }}
