--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -1,9 +1,9 @@
 name: OTC Test - Release
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - 'main'
+  # push:
+  #   branches:
+  #     - 'main'
 
 permissions:
   contents: write
