--- a/.github/workflows/helper.yml
+++ b/.github/workflows/helper.yml
@@ -33,5 +33,5 @@ jobs:
     needs: test
     steps:
       - env:
-          OUTPUT: ${{needs.test.outputs.output1}}
+          OUTPUT: ${{needs.test.outputs.paths}}
         run: echo "$OUTPUT"
