--- a/.github/workflows/helper.yml
+++ b/.github/workflows/helper.yml
@@ -31,4 +31,4 @@ jobs:
     steps:
       - env:
           OUTPUT: ${{needs.test.outputs.files}}
-        run: echo "$OUTPUT"
+        run: echo $OUTPUT
