--- a/helper/action.yml
+++ b/helper/action.yml
@@ -20,11 +20,7 @@ runs:
     id: files
     run: |
       files=`ls ${{ inputs.path }}/*.${{ inputs.ext }}`
-      for eachfile in $files
-       do
-        echo "Files: $eachfile"
-        echo "::set-output name=files::$eachfile"
-       done
+      echo "::set-output name=files::$files"
     shell: bash
 
 
