--- a/helper/action.yml
+++ b/helper/action.yml
@@ -18,9 +18,7 @@ runs:
   steps:
   - name: Get files in 
     id: files
-    run: |
-      files=`ls ${{ inputs.path }}/*.${{ inputs.ext }}`
-      echo "files=$files"
+    run: echo "::set-output name=files::$(ls ${{ inputs.path }}/*.${{ inputs.ext }} | jq -R -s -c 'split("\n")[:-1]')"
     shell: bash
 
 
