--- a/helper/action.yml
+++ b/helper/action.yml
@@ -18,7 +18,7 @@ runs:
   steps:
   - name: Get files in 
     id: files
-    run: echo "::set-output name=files::$(ls ${{ inputs.path }}/*.${{ inputs.ext }} | jq -R -s -c 'split("\n")[:-1]')"
+    run: echo "files=$(ls ${{ inputs.path }}/*.${{ inputs.ext }} | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
     shell: bash
 
 
