--- a/.github/workflows/helper.yml
+++ b/.github/workflows/helper.yml
@@ -30,12 +30,12 @@ jobs:
     name: OTC test outputs - helper
     environment: INT
     runs-on: [Linux]
-    # strategy:
-    #   matrix:
-    #     file: ${{ needs.test.outputs.files }}
+    strategy:
+      matrix:
+        file: ${{ needs.test.outputs.files }}
     needs: test
     steps:
       - name: Test
         env:
          OUTPUT: ${{matrix.file}}
-        run: echo ${{ needs.test.outputs.files }}
+        run: echo $OUTPUT
