--- a/helper/action.yml
+++ b/helper/action.yml
@@ -27,6 +27,6 @@ runs:
 
   - name: Get dirs
     id: dirs
-    run: echo "dirs=$(ls -d ${{ inputs.path }}/*| jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+    run: echo "dirs=$(ls -d ${{ inputs.path }}/*/| jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
     shell: bash
 
