--- a/helper/action.yml
+++ b/helper/action.yml
@@ -22,7 +22,7 @@ runs:
   steps:
   - name: Get files
     id: files
-    run: echo "files=$(ls ${{ inputs.path }}/*.${{ inputs.ext }}| jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+    run: echo "files=$(basename (ls ${{ inputs.path }}/*.${{ inputs.ext }})| jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
     shell: bash
 
   - name: Get dirs
