--- a/helper/action.yml
+++ b/helper/action.yml
@@ -22,11 +22,11 @@ runs:
   steps:
   - name: Get files
     id: files
-    run: echo "files=$(basename (ls ${{ inputs.path }}/*.${{ inputs.ext }})| jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+    run: echo "files=$(basename (ls ${{ inputs.path }}/*.${{ inputs.ext }}) | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
     shell: bash
 
   - name: Get dirs
     id: dirs
-    run: echo "dirs=$(ls -d ${{ inputs.path }}/*/| jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+    run: echo "dirs=$(basename (ls -d ${{ inputs.path }}/*/) | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
     shell: bash
 
