--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -19,7 +19,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
       - run: export
       - run: |
-          git commit --allow-empty -m "fix: by push to main"
+          git commit --allow-empty -m "fix: push to main"
           git push origin main
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
